# lwa-fastapi-middleware-bedrock-agent

./: LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
example/bedrock-agent-fastapi/app/: main.py  requirements.txt
src/bedrock_agent/: middleware.py
